# SecureSkillHub

./: .gitignore  AGENTS.md  AGENT_TASK_TEMPLATE.md  CLAUDE.md  DEPLOY_MANAGER.md  DOCUMENTATION_MANAGER.md  FRONTEND_MANAGER.md  PROJECT_MANAGER.md  README.md  SKILLS_MANAGER.md  STRATEGY.md  auto_tag.py  backfill_verification_level.py  batch_verify_agent_skills.py  build_packages.py  check_reachability.py  crawl_state.py  import_agent_skills.py  process_discovered.py  pyproject.toml  requirements.txt  run_crawl.py  run_pending_crawlers.py  run_verify_sample.py  run_verify_strict_5agent.py  skills_manager_review.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: deploy.yml
.well-known/: agent.json
api/: package.json  tsconfig.json  wrangler.toml
api/src/: index.ts
cli/: package.json
data/: 10-agent-review-report.md  claudeskills_info_complete.json  crawl-state.json  pm-review-2026-02-28.md  reachability-check.json  secm-audit-log.json  skill-manager-log.json  stats.json  tags.json  verify-queue.json
data/pattern-test-cases/: dangerous_calls.json  injection_patterns.json  obfuscation.json
data/reports/: pm_non_pass_20260301T060315Z.json
data/skills/: -0b70eb6d.json  (+12693 more)
memory/: agent-experience-manager.md
roles/: AGENT_EXPERIENCE_MANAGER.md  DEPLOY_MANAGER.md  DOCUMENTATION_MANAGER.md  FRONTEND_MANAGER.md  MEMORY_MANAGER.md  PROJECT_MANAGER.md  SECURITY_MANAGER.md  SKILLS_MANAGER.md  VERIFICATION_MANAGER.md
site/: docs.html  entry.md  index.html  profile.html  robots.txt  sitemap.xml
src/: docm_registry.py  reachability.py
(+269 files in other folders)
